# etherbone-core

./: Manifest.py
api/: .gitignore  Makefile.am  NEWS  README  autogen.sh  configure.ac  etherbone.h  etherbone.pc.in  make-deb.sh
api/debian/: changelog  control  control.in  copyright  etherbone-tools.install  rules
api/format/: slave.c
api/glue/: device.c  handler.c  readwrite.c  sdb.c  sdb.h  socket.c  version.c.in  version.h
api/memory/: array.c  dynamic.c  malloc.c  memory-array.h  memory-malloc.h  memory.h  static.c
api/tools/: .gitignore  eb-discover.sgml  eb-find.c  eb-find.sgml  eb-get.c  eb-get.sgml  eb-ls.c  eb-ls.sgml  eb-msi.c  eb-put.c  eb-put.sgml  eb-read.c  eb-read.sgml  eb-snoop.c  eb-snoop.sgml  eb-tunnel.sgml  eb-write.c  eb-write.sgml
api/transport/: dev.c  dev.h  posix-ip.h  tunnel.c
hdl/eb_master_core/: Manifest.py  eb_framer.vhd  eb_master_eth_tx.vhd  eb_master_top.vhd  eb_record_gen.vhd  ebm.xml  ebm_auto.vhd  ebm_auto_pkg.vhd  ebm_regs.h
hdl/eb_pcie_core/: Manifest.py  eb_pcie_slave.vhd  eb_pcie_slave.vhd.bak  eb_pcie_slave_pkg.vhd
hdl/eb_slave_core/: eb_hdr_pkg.vhd  eb_internals_pkg.vhd  etherbone_pkg.vhd
hdl/eb_usb_core/: ez_usb_pkg.vhd
spec/: spec.tex
